# adel

./: .gitignore  AUTHORS.txt  CHANGELOG.md  CR coding sprint 07-03-18.docx  LICENCE.txt  README.md  README.rst  TODO.txt  metainfo.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: conda-package-build.yml
adel/: Adel.R  AdelR.py  ArvalisToAdel.R  Stand.py  TestAdel.R  UseAdel.R  WheatTillering.py  __wralea__.py  adel.py  adel_dynamic.py  astk_interface.py  data_samples.py  dresser.py  exception.py  fitting.py  genString.R  geometric_elements.py  interface.py  lpy2mtg.py  main.py  mtg.py  mtg_interpreter.py  newmtg.py  plantgen_extensions.py  postprocessing.py  setAdel.R  symbol.py
adel/Applications/: __wralea__.py
adel/Tutorials/: __wralea__.py  adel_modular_dataflow.py
adel/adelMons/: AdelPars.h  IOtable.py  __wralea__.py  adelSimexp2.lsys  adel_sim_exp.py  can2pov.py  clean_can.py  colors.def  get_val.py  ground_cover.py  groupOutput_mais.py  loc_pov_cam.py  ls_sim.py  maize.8  par.opt  render_pov.py  spitters_journalier.py  visu_can.py  write_dict.py  write_graphtalPars.py  write_groud_cover.py  writeparsGL.R
adel/astk_interfaces/: __wralea__.py
adel/data/: Adel2.lpy  HMj.csv  HS_GL_SSI_dynamic_table.csv  Inputdim_SoNp_to_fit.csv  Jess_axeT_SoNp.csv  Jess_dimT_SoNp_bis.csv  Jess_earTCa0N.csv  Jess_phenT_SoNp.csv  Jess_ssi2sen.csv  Mariem_HS_GL_SSI_T.csv  Mariem_axeT.csv  Mariem_cardinalityT.csv  Mariem_cohortT.csv  Mariem_dimT.csv  Mariem_dimT_abs.csv  Mariem_dimT_user_MIN.csv  Mariem_dynT.csv  Mariem_dynT_user_FULL.csv  Mariem_dynT_user_MIN.csv  Mariem_dynT_user_SHORT.csv  Mariem_phenT.csv  Mariem_phenT_abs.csv  Mariem_phenT_first.csv  Mariem_tilleringT.csv  Maxwell_2011_d220_N1_GroundCover_mesure.csv  Maxwell_2011_d220_N1_LAI-PAI_mesure.csv  Maxwell_2011_d220_N1_NbrAxeActif_mesure.csv  Maxwell_2011_d220_N1_PAIvert_57_mesure.csv  Maxwell_2011_d220_N1_VariablesMesurees_peraxis.csv  Maxwell_2011_d220_N1_axeT.csv  Maxwell_2011_d220_N1_axeT_col corrige.csv  Maxwell_2011_d220_N1_axeT_plante10.csv  Maxwell_2011_d220_N1_dimT.csv  Maxwell_2011_d220_N1_dimT_test.csv  Maxwell_2011_d220_N1_dimT_user_FULL.csv  Maxwell_2011_d220_N1_dimT_user_MIN.csv  Maxwell_2011_d220_N1_dimT_user_SHORT.csv  Maxwell_2011_d220_N1_dynT_user_FULL.csv  Maxwell_2011_d220_N1_dynT_user_MIN.csv  Maxwell_2011_d220_N1_dynT_user_SHORT.csv  (+67 more)
adel/fit/: __wralea__.py  adel_input_fitting.py  axis_table_fitting.py  dim_table_fitting.py  dimension_fitting.py  fit.py  fit_adel_input_data.py  fit_adel_input_data_first.py  fit_adel_input_data_second.py  fit_config.py  fitting_tools.py  leaf_dynamic_parameters_table_fitting.py  organ_dimensions_table_fitting.py  parameters_table_fitting.py  phen_table_fitting.py  thermal_time.py
adel/geometry/: __wralea__.py  geometry.py
adel/io/: GetAdelString.py  PairAsDict.py  __wralea__.py  csv2dataframe.py  dataframe2csv.py  image.py  io.py  mylist.py
adel/leaf/: __wralea__.py  curvature.py  curve_dicretizer.py  curve_discretizer.py  stress_sr.py
adel/lsystem/: Adel.l  Adel.str  Adel2.lpy  Adel3.lpy  AdelBle.l  AdelBlePars.h  AdelPars.h  AleaPars.h  WheatSymbol.txt  __wralea__.py  bid.str  bid.txt  bid001.str  bid002.str  bid003.str  bid004.str  bid005.str  bid006.str  bid007.str  bid008.str  bid009.str  bid010.str  bid011.str  bid012.str  bid013.str  bid014.str  bid015.str  bid016.str  bid017.str  bid018.str  bid019.str  bid020.str  bid021.str  bid022.str  bid023.str  bid024.str  bid025.str  bid026.str  bid027.str  (+29 more)
caribu/: .sconsign.dblite  AUTHORS.txt  README.TXT  SConstruct  options.py  setup.cfg  setup.py
conda/: environment.yml  meta.yaml
debian/: changelog  control  copyright  python-alinea.adel.preinst  rules
doc/: conf.py  contents.rst  environment.yml  index.rst
example/: compute_rel_interception_from_one_leaf_digits.py  example_leaf_areas.py  example_leaf_areas.py.bak  laminaCurv.RData  reconstruction_digit.py  reconstruction_digit.py.bak  test_AdelWheat.py  test_adelR.py  test_adelR.py.bak  test_newmtg.py  test_newmtg.py.bak  test_sensitivity.py
nema/: .sconsign.dblite  README.txt  SConstruct  TODO.txt  metainfo.ini  setup.py
prospect/: metainfo.ini  setup.cfg  setup.py
test/: test_Adel_Maxwell_plante11.py  test_Adel_Maxwell_plante11.py.bak  test_adel.py  test_adelR.py  test_adel_dynamic.py  test_adelwheat_dynamic.py  test_astk_interface.py  test_astk_interface.py.bak  test_data_samples.py  test_dataflow.py  test_dresser.py  test_fitting.py  test_fitting2.py  test_leaf.py  test_mtg.py  test_mtg.py.bak  test_mtg2.py  test_mtg2.py.bak  test_mtg_edition.py  test_newmtg.py  test_plantgen.py  test_plantgen.py.bak  test_postprocessing.py  test_povray.py  test_sensitivity.py  test_stand.py
(+1611 files in other folders)
