[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alinea.adel"
authors = [
  { name = "Christian Fournier" },
  { name = "Christophe Pradal" },
  { name = "Bruno Andrieu" },
]
description = "3D plant simulation of graminae crops"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: CeCILL-C License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dynamic = ["readme"]
version = "2.0.2"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "rpy2",
]

[project.optional-dependencies]
test = ["pytest"]
notebook = ["jupyter"]

[project.urls]
Homepage = "https://openalea.readthedocs.io/"
"Bug Tracker" = "https://github.com/openalea-incubator/adel/issues"
Discussions = "https://github.com/openalea-incubator/adel/discussions"
Changelog = "https://github.com/openalea-incubator/adel/releases"

[project.entry-points."wralea"]
"adel" = "alinea.adel"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["alinea.*"]

[tool.setuptools.package-data]
"*" = ['*.RData', '*.R', '*.8', '*.h', '*.str','*.txt', '*.l', '*.map', '*.csv', '*.json', '*.png']